# devops

./: .gitignore  README.md  readme.md
ansible/: README.md  ansible.cfg  playbook.yaml  readme.md
ansible/wsl-setup-ansible/: README.md  ansible.cfg  playbook.yml
ansible/wsl-setup-ansible/group_vars/: all.yml
ansible/wsl-setup-ansible/roles/base/tasks/: main.yml
ansible/wsl-setup-ansible/roles/docker/tasks/: main.yml
ansible/wsl-setup-ansible/roles/git/tasks/: main.yml
ansible/wsl-setup-ansible/roles/github-cli/tasks/: main.yml
ansible/wsl-setup-ansible/roles/nodejs/tasks/: main.yml
ansible/wsl-setup-ansible/roles/python/tasks/: main.yml
ansible/wsl-setup-ansible/roles/zsh/tasks/: main.yml
docker/: README.md  docker_network_tutorial.md
git/: README.md  readme.md
kubernetes/: README.md  readme.md
linux/: README.md  readme.md
linux/make/: README.md
linux/shell-scripts/: README.md  script-git.sh  ss-git.sh
linux/task/: README.md  Taskfile.yml
linux/wsl/: README.md
make/: readme.md
python/: README.md  README_MkDocs.md  README_py.md  README_pytest.md  readme.md
python/poetry/: README_Poetry.md
python/template_projeto_python/: pyproject.toml
python/template_projeto_python_qualidade/: .pre-commit-config.yaml  README.md  pyproject.toml
shell-scripts/: readme.md  script-git.sh
terraform/: README.md  gcp_vm.tf  readme.md
